tekton/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth
  namespace: tekton-pipelines
spec:
  basicAuth:
    secret: htaccess
    removeHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  entrypoints:
  - http
  - https
  routes:
  - kind: Rule

    match: HostRegexp(`tekton.{domain:.+}`)
    priority: 10
    services:
    - name: tekton-dashboard
      port: 9097
    middlewares:
    - name: basicauth
